--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ yarn-error.log*
 # subgraph
 packages/subgraph/build/
 packages/subgraph/src/types/
+
+node_modules
+
+#Hardhat files
+cache
+artifacts
